# mcp-gateway-auth-pattern

./: README.md
client/: .gitignore  README.md  example_usage.sh  pyproject.toml
client/mcp_oauth_client/: __init__.py  auth.py  main.py  storage.py
gateway/: pyproject.toml
gateway/mcp_auth_gateway/: __init__.py  auth_interceptor.py  gateway.py  logging.py  main.py  oauth_registration.py  token_exchange.py
server/: .gitignore  README.md  pyproject.toml
server/src/mcp_auth_server/: __init__.py  __main__.py  auth.py  discovery.py  registration.py  server.py  tools.py
server/tests/: __init__.py  test_oauth.py  test_server.py
