[project]
name = "mcp-oauth-client"
version = "0.1.0"
description = "A command-line interface for interacting with MCP servers using OAuth2.1 authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
mcp-auth-client = "mcp_oauth_client.main:main"

[tool.uv]
package = true
